--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Awesome Research Group
+name: ASKE Yeast Group
 url: http://awesome.example.edu
 
 exclude: [bibble, README.md, Makefile, screenshot.png]
