--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,7 +1,8 @@
 
 prof-a:
-    display_name: "Prof A"
+    display_name: "A/Prof Benjamin Binder"
     role: faculty
+    image: /img/people/ben.png
 
 prof-b:
     display_name: "Prof B"
