--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 _site
 _includes/pubs.html
 /test-deploy.sh
+.bundle
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+.DS_store
+.ruby-version
+.tweet-cache
+Gemfile.lock
+vendor
