--- a/_data/people.yml
+++ b/_data/people.yml
@@ -33,47 +33,16 @@ wolverine:
     github: wolverine
     role: postdoc
 
-storm:
-    display_name: "Storm"
-    webpage: "http://en.wikipedia.org/wiki/Storm_%28Marvel_Comics%29"
+kaili:
+    display_name: "Kai Li"
+    webpage: "https://kaili99.netlify.app/"
     role: grad
-    image: /img/people/storm.png
-
-grad-a:
-    display_name: "Grad A"
-    role: grad
+    image: /img/people/kaili.png
 
 grad-b:
     display_name: "Graduate Student B With Long Name"
     role: grad
 
-grad-c:
-    display_name: "Grad C"
-    role: grad
-
-grad-d:
-    display_name: "Grad D"
-    role: grad
-
-grad-e:
-    display_name: "Grad E"
-    role: grad
-
-grad-f:
-    display_name: "Grad F"
-    role: grad
-
-grad-g:
-    display_name: "Grad G"
-    role: grad
-
-grad-h:
-    display_name: "Grad H"
-    role: grad
-
-grad-i:
-    display_name: "Grad I"
-    role: grad
 
 alum-a:
     display_name: "Alum A"
