modified entire website

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,36 +1,41 @@
 
-prof-a:
+ben:
     display_name: "A/Prof Benjamin Binder"
+    webpage: "https://researchers.adelaide.edu.au/profile/benjamin.binder"
     role: faculty
     image: /img/people/ben.png
 
-prof-b:
-    display_name: "Prof B"
+ed:
+    display_name: "Dr Edward Green"
+    webpage: "https://researchers.adelaide.edu.au/profile/edward.green"
     role: faculty
+    image: /img/people/ed.png
 
-prof-c:
-    display_name: "Prof C"
+alex:
+    display_name: "Dr Alexandar Tam"
+    webpage: "https://alex-tam.github.io/"
     role: faculty
+    image: /img/people/alex.png
 
-profx:
-    display_name: "Professor X"
-    webpage: "http://en.wikipedia.org/wiki/Professor_X"
-    github: profx
-    role: faculty
-    image: /img/people/prof-x.png
-    bio: Professor
+# profx:
+#     display_name: "Professor X"
+#     webpage: "http://en.wikipedia.org/wiki/Professor_X"
+#     github: profx
+#     role: faculty
+#     image: /img/people/prof-x.png
+#     bio: Professor
 
-scott:
-    display_name: "Scott Summers"
-    webpage: "http://en.wikipedia.org/wiki/Cyclops_(comics)"
-    role: staff
-    image: /img/people/scott.png
-    bio: aka Cyclops
+# scott:
+#     display_name: "Scott Summers"
+#     webpage: "http://en.wikipedia.org/wiki/Cyclops_(comics)"
+#     role: staff
+#     image: /img/people/scott.png
+#     bio: aka Cyclops
 
-wolverine:
-    display_name: "Wolverine"
-    webpage: "http://en.wikipedia.org/wiki/Wolverine_%28comics%29"
+danny:
+    display_name: "Dr Daniel Netherwood"
     github: wolverine
+    image: /img/people/danny.png
     role: postdoc
 
 kaili:
@@ -39,93 +44,93 @@ kaili:
     role: grad
     image: /img/people/kaili.png
 
-grad-b:
-    display_name: "Graduate Student B With Long Name"
-    role: grad
+# grad-b:
+#     display_name: "Graduate Student B With Long Name"
+#     role: grad
 
 
-alum-a:
-    display_name: "Alum A"
-    role: alum
-    bio: "Ph.D., 2013. Now at Microsoft Research."
+# alum-a:
+#     display_name: "Alum A"
+#     role: alum
+#     bio: "Ph.D., 2013. Now at Microsoft Research."
 
-alum-b:
-    display_name: "Alum B With Way Longer Name"
-    role: alum
+# alum-b:
+#     display_name: "Alum B With Way Longer Name"
+#     role: alum
 
-alum-c:
-    display_name: "Alum C"
-    role: alum
-    webpage: "https://www.google.com"
+# alum-c:
+#     display_name: "Alum C"
+#     role: alum
+#     webpage: "https://www.google.com"
 
-alum-d:
-    display_name: "Alum D"
-    role: alum
+# alum-d:
+#     display_name: "Alum D"
+#     role: alum
 
-alum-e:
-    display_name: "Alum E"
-    role: alum
+# alum-e:
+#     display_name: "Alum E"
+#     role: alum
 
-alum-f:
-    display_name: "Alum F"
-    role: alum
+# alum-f:
+#     display_name: "Alum F"
+#     role: alum
 
-alum-g:
-    display_name: "Alum G"
-    role: alum
+# alum-g:
+#     display_name: "Alum G"
+#     role: alum
 
-alum-h:
-    display_name: "Alum H"
-    role: alum
+# alum-h:
+#     display_name: "Alum H"
+#     role: alum
 
-alum-i:
-    display_name: "Alum I"
-    role: alum
+# alum-i:
+#     display_name: "Alum I"
+#     role: alum
 
-collab-a:
-    display_name: "Collaborator A"
-    role: collab
+# collab-a:
+#     display_name: "Collaborator A"
+#     role: collab
 
-collab-b:
-    display_name: "Collaborator B With Long Name"
-    role: collab
+# collab-b:
+#     display_name: "Collaborator B With Long Name"
+#     role: collab
 
-collab-c:
-    display_name: "Collaborator C"
-    role: collab
+# collab-c:
+#     display_name: "Collaborator C"
+#     role: collab
 
-collab-d:
-    display_name: "Collaborator D"
-    role: collab
+# collab-d:
+#     display_name: "Collaborator D"
+#     role: collab
 
-collab-e:
-    display_name: "Collaborator E"
-    role: collab
+# collab-e:
+#     display_name: "Collaborator E"
+#     role: collab
 
-ugrad-a:
-    display_name: "Ugrad A"
-    role: ugrad
+# ugrad-a:
+#     display_name: "Ugrad A"
+#     role: ugrad
 
-ugrad-b:
-    display_name: "Ugrad Student B With Long Name"
-    role: ugrad
+# ugrad-b:
+#     display_name: "Ugrad Student B With Long Name"
+#     role: ugrad
 
-ugrad-c:
-    display_name: "Ugrad C"
-    role: ugrad
+# ugrad-c:
+#     display_name: "Ugrad C"
+#     role: ugrad
 
-ugrad-d:
-    display_name: "Ugrad D"
-    role: ugrad
+# ugrad-d:
+#     display_name: "Ugrad D"
+#     role: ugrad
 
-ugrad-e:
-    display_name: "Ugrad E"
-    role: ugrad
+# ugrad-e:
+#     display_name: "Ugrad E"
+#     role: ugrad
 
-ugrad-alum-a:
-    display_name: "Past Ugrad A"
-    role: ugrad-alum
+# ugrad-alum-a:
+#     display_name: "Past Ugrad A"
+#     role: ugrad-alum
 
-ugrad-alum-b:
-    display_name: "Past Ugrad Student B With Long Name"
-    role: ugrad-alum
+# ugrad-alum-b:
+#     display_name: "Past Ugrad Student B With Long Name"
+#     role: ugrad-alum
